adjust comment